--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">APP</string>
+    <string name="app_name">安全中心</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">你好</string>
